syntax="proto3";

import "google/protobuf/wrappers.proto";

option go_package="service/order_management";

service OrderManagement {
    rpc getOrder(google.protobuf.StringValue) returns(Order);
    rpc addOrder(Order) returns (google.protobuf.StringValue);
    rpc searchOrders(google.protobuf.StringValue) returns (stream Order);
    rpc updateOrders(stream Order) returns (google.protobuf.StringValue);
    rpc processOrders(stream google.protobuf.StringValue) returns (stream CombinedShipment);
}

message Order {
    string id = 1;
    repeated string items = 2;
    string description = 3;
    float price = 4;
    string destination = 5;
}

message CombinedShipment {
    string id = 1;
    string status = 2;
    repeated Order orderList = 3;
}